--- a/Mobile/Member-DailyRecord.html
+++ b/Mobile/Member-DailyRecord.html
@@ -293,7 +293,7 @@
                                             <div class="th">充值时间</div>
 
                                             <div class="th">充值金额</div>
-
+											<div class="th">订单号</div>																						<div class="th">充值金额</div>
                                             <!-- <div class="th">充值方式</div> -->
 
                                             <div class="th">状态</div>
@@ -834,28 +834,7 @@
                                         for (i = 0; i < _length; i++) {
 
                                             _each.append(
-
-                                                '<div class="tr">' +
-
-                                                '<div class="td" data-title="充值时间">' + data.body.list[i]
-
-                                                .ua_add_datetime + '</div>' +
-
-                                                '<div class="td" data-title="充值金额">' + data.body.list[i]
-
-                                                .ua_value + '</div>' +
-
-                                                // '<div class="td" data-title="充值方式">' + 'none' +
-
-                                                // '</div>' +
-
-                                                '<div class="td" data-title="状态">' + data.body.list[i].ua_status +
-
-                                                '</div>'
-
-                                                // '<div class="td" data-title="操作">' + 'none' + '</div>' +
-
-                                                // '</div>'
+	'<div class="tr">' +'<div class="td" data-title="充值时间">' + data.body.list[i].ua_add_datetime + '</div>' +											'<div class="td" data-title="充值类型">' + data.body.list[i].ua_type_1 + '</div>' +											'<div class="td" data-title="订单号">' + data.body.list[ i].uro_orderid + '</div>' +                                            '<div class="td" data-title="充值金额">' + data.body.list[i].ua_value + '</div>' +											'<div class="td" data-title="状态">' + data.body.list[i].ua_status_str +'</div>'+											'</div>'
 
                                             )
 
@@ -1025,9 +1004,7 @@
 
                 $.ajax({
 
-                    url: "/api/Api/report?sess=" + localStorage.session +
-
-                        "&type=3&p=1&limt=5",
+                    url: "/api/Api/report?sess=" + localStorage.session ,
 
                     type: "POST",
 
@@ -1052,36 +1029,7 @@
                                     for (i = 0; i < _length; i++) {
 
                                         _each.append(
-
-                                            '<div class="tr">' +
-
-                                            '<div class="td" data-title="充值时间">' + data.body.list[
-
-                                                i]
-
-                                            .ua_add_datetime + '</div>' +
-
-                                            '<div class="td" data-title="充值金额">' + data.body.list[
-
-                                                i]
-
-                                            .ua_value + '</div>' +
-
-                                            // '<div class="td" data-title="充值方式">' + 'none' +
-
-                                            // '</div>' +
-
-                                            '<div class="td" data-title="状态">' + data.body.list[
-
-                                                i].ua_status +
-
-                                            '</div>' +
-
-                                            // '<div class="td" data-title="操作">' + 'none' +
-
-                                            // '</div>' +
-
-                                            '</div>'
+											'<div class="tr">' +'<div class="td" data-title="充值时间">' + data.body.list[i].ua_add_datetime + '</div>' +											'<div class="td" data-title="充值类型">' + data.body.list[i].ua_type_1 + '</div>' +											'<div class="td" data-title="订单号">' + data.body.list[ i].uro_orderid + '</div>' +                                            '<div class="td" data-title="充值金额">' + data.body.list[i].ua_value + '</div>' +											'<div class="td" data-title="状态">' + data.body.list[i].ua_status_str +'</div>'+											'</div>'
 
                                         )
 
