後台渠道顯 第三方 50-50000 銀行卡 100-50000 唯信  100-3000 支付保  100-50

--- a/Member-Deposit.html
+++ b/Member-Deposit.html
@@ -325,9 +325,9 @@
 
                                         <span style="">* 單筆充值限額：最低
 
-                                            <span style="color:red;">50.00</span> 元，最高
+                                            <span style="color:red;" class="amount-min">50</span> 元，最高
 
-                                            <span style="color:red;">50000.00</span> 元 *
+                                            <span style="color:red;" class="amount-max">50000</span> 元 *
 
                                         </span>
 
