--- a/Live-Entertainment.html
+++ b/Live-Entertainment.html
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
 
-
+	<script src="/js/iphone.browser.js"></script>
 
 
 
