--- a/Member-CardManagement.html
+++ b/Member-CardManagement.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
+	<script src="/js/iphone.browser.js"></script>
 
-
-
+	<script src="/js/iphone.browser.js"></script>
     <!--iphone+ 736(560)-->
 
     <!--iphone 667(555)-->
