--- a/Home-Index.html
+++ b/Home-Index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
 
-
+	<script src="/js/iphone.browser.js"></script>
 
 
 
