--- a/Live-App.html
+++ b/Live-App.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
     <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
-
+   <script src="/js/iphone.browser.js"></script>
 
 
     <!--iphone+ 736(560)-->
