--- a/Live-Discount.html
+++ b/Live-Discount.html
@@ -40,6 +40,7 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
+	<script src="/js/iphone.browser.js"></script>
 
 
     <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
