--- a/Member-Apply-Discount.html
+++ b/Member-Apply-Discount.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
 
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">		<script src="/js/iphone.browser.js"></script>
 
 
 
