--- a/Member-CashRecord.html
+++ b/Member-CashRecord.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
 
-
+	<script src="/js/iphone.browser.js"></script>
 
     <!--iphone+ 736(560)-->
 
