--- a/Member-Transfer.html
+++ b/Member-Transfer.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
-
+	<script src="/js/iphone.browser.js"></script>
 
 
     <!--iphone+ 736(560)-->
