--- a/Member-Withdrawal.html
+++ b/Member-Withdrawal.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
-
+	<script src="/js/iphone.browser.js"></script>
 
     <!--iphone+ 736(560)-->
 
