--- a/Mobile/Member-Register.html
+++ b/Mobile/Member-Register.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
-
+	<script src="/js/pc.browser.js"></script>
 
     <!--iphone+ 736(560)-->
 
