--- a/Mobile/Member-DailyRecord.html
+++ b/Mobile/Member-DailyRecord.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
 
-
+	<script src="/js/pc.browser.js"></script>
 
     <!--iphone+ 736(560)-->
 
