--- a/Mobile/Member-Transfer.html
+++ b/Mobile/Member-Transfer.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
-
+	<script src="/js/pc.browser.js"></script>
 
 
     <!--iphone+ 736(560)-->
