--- a/Mobile/Home-Index.html
+++ b/Mobile/Home-Index.html
@@ -44,7 +44,7 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
-
+	<script src="/js/pc.browser.js"></script>
 
 
 
