--- a/Mobile/Member-Deposit.html
+++ b/Mobile/Member-Deposit.html
@@ -283,7 +283,7 @@
 
                                         <span>* 單筆充值限額：最低
 
-										   <span style="color:red;" class="amount-min">50</span> 元，最高                                            <span style="color:red;" class="amount-max">50000</span> 元 *
+										   <span style="color:red;" class="amount-min"></span> 元，最高                                            <span style="color:red;" class="amount-max"></span> 元 *
 
                                         </span>
 
