轉帳=>轉換金額

--- a/Member-Discount.html
+++ b/Member-Discount.html
@@ -453,7 +453,7 @@
 
 
 
-                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转换金额</a>
 
 
 
