--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -224,7 +224,7 @@
 
                         <li>
 
-                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转换金额</a>
 
                         </li>
 
