--- a/Member-Withdrawal.html
+++ b/Member-Withdrawal.html
@@ -222,7 +222,7 @@
 
                         <li>
 
-                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转换金额</a>
 
                         </li>
 
