--- a/Mobile/Member-DailyRecord.html
+++ b/Mobile/Member-DailyRecord.html
@@ -182,7 +182,7 @@
 
                         <li>
 
-                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转换金额</a>
 
                         </li>
 
