--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -298,7 +298,7 @@
 
                                         <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="6">优惠</a>
 
-                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="4,5">转帐</a>
+                                        <a href="javascript:void(0)" class="option jq-member-option" data-daily-option="4,5">转换金额</a>
 
                                     </div>
 
