请输入邀请码...

--- a/Mobile/Live-Entertainment.html
+++ b/Mobile/Live-Entertainment.html
@@ -770,7 +770,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码(非必填)...">
 
 
 
