--- a/Mobile/Member-DailyRecord.html
+++ b/Mobile/Member-DailyRecord.html
@@ -542,7 +542,7 @@
 
                         <i class="icon-key"></i>
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码(非必填)...">
 
                     </div>
 
