--- a/Mobile/Home-Index.html
+++ b/Mobile/Home-Index.html
@@ -586,7 +586,7 @@
 
 
 
-                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码...">
+                        <input class="input" type="text" name="invitecode" placeholder="请输入邀请码(非必填)...">
 
 
 
