--- a/Member-Transfer.html
+++ b/Member-Transfer.html
@@ -356,7 +356,7 @@
 
                                 <div class="confirm-group-container clear">
 
-                                    <p class="title">平台金额</p>
+                                    <p class="title">AG金额</p>
 
                                     <p class="detail jq-balance-num"></p>
 
@@ -892,7 +892,7 @@
 
                     $.ajax({
 
-                        url: "/api/Api/transferToLdyl?sess=" + localStorage.session + "&amount=" + _cash_nam1,
+                        url: "/api/Api/transferToLdyl?sess=" + localStorage.session + "&amount=" + _cash_nam2,
 
                         type: "GET",
 
