--- a/Mobile/Member-Transfer.html
+++ b/Mobile/Member-Transfer.html
@@ -314,7 +314,7 @@
 
                                 <div class="confirm-group-container clear">
 
-                                    <p class="title">平台金额</p>
+                                    <p class="title">AG金额</p>
 
                                     <p class="detail jq-balance-num"></p>
 
@@ -873,7 +873,7 @@
                     $.ajax({
 
                         url: "/api/Api/transferToLdyl?sess=" + localStorage.session + "&amount=" +
-                            _cash_nam1,
+                            _cash_nam2,
 
                         type: "GET",
 
