--- a/Home-Index.html
+++ b/Home-Index.html
@@ -1165,9 +1165,9 @@
 
 
 
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
+                                            <!-- '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' + -->
+                                            <!-- data.body.list[i].productCode + '/' + data.body.list[ -->
+                                                <!-- i].tcgGameCode + '.png" alt="">' + -->
 
 
 
@@ -1218,7 +1218,7 @@
 
                     success: function (data) {
 
-                        console.log(data);
+                        <!-- console.log(data); -->
 
                         var _each = $(".jq-owl-banner");
 
