--- a/Member-Transfer.html
+++ b/Member-Transfer.html
@@ -330,7 +330,7 @@
 
                                         <select class="select" name="" >
 
-                                            <option value="">AG</option>
+                                            <option value="">DG</option>
 
                                         </select>
 
@@ -356,7 +356,7 @@
 
                                 <div class="confirm-group-container clear">
 
-                                    <p class="title">AG金额</p>
+                                    <p class="title">DG金额</p>
 
                                     <p class="detail jq-balance-num"></p>
 
