--- a/Live-App.html
+++ b/Live-App.html
@@ -44,7 +44,7 @@
 
             <div class="container clear">
 
-                <a href="Home-Index.html" class="img-container">
+                <a href="index.php" class="img-container">
 
                     <img src="img/logo.png" alt="乐鼎国际">
 
@@ -164,7 +164,7 @@
 
                     <li class="jq-nav-option active">
 
-                        <a href="Home-Index.html">手机APP</a>
+                        <a href="index.php">手机APP</a>
 
                     </li>
 
