--- a/Live-Electric.html
+++ b/Live-Electric.html
@@ -86,7 +86,7 @@
 
 
 
-                <a href="Home-Index.html" class="img-container">
+                <a href="index.php" class="img-container">
 
 
 
@@ -329,7 +329,7 @@
 
 
 
-                        <a href="Home-Index.html">手机APP</a>
+                        <a href="index.php">手机APP</a>
 
 
 
