--- a/Member-CardManagement.html
+++ b/Member-CardManagement.html
@@ -162,7 +162,7 @@
 
                     <li class="jq-nav-option">
 
-                        <a href="Home-Index.html">手机APP</a>
+                        <a href="index.php">手机APP</a>
 
                     </li>
 
