--- a/Live-Discount.html
+++ b/Live-Discount.html
@@ -91,7 +91,7 @@
 
 
 
-                <a href="Home-Index.html" class="img-container">
+                <a href="index.php" class="img-container">
 
 
 
@@ -334,7 +334,7 @@
 
 
 
-                        <a href="Home-Index.html">手机APP</a>
+                        <a href="index.php">手机APP</a>
 
 
 
