--- a/Member-Apply-Discount.html
+++ b/Member-Apply-Discount.html
@@ -42,7 +42,7 @@
 
             <div class="container clear">
 
-                <a href="Home-Index.html" class="img-container">
+                <a href="index.php" class="img-container">
 
                     <img src="img/logo.png" alt="乐鼎国际">
 
@@ -162,7 +162,7 @@
 
                     <li class="jq-nav-option">
 
-                        <a href="Home-Index.html">手机APP</a>
+                        <a href="index.php">手机APP</a>
 
                     </li>
 
