--- a/Member-Discount.html
+++ b/Member-Discount.html
@@ -90,7 +90,7 @@
 
 
 
-                <a href="Home-Index.html" class="img-container">
+                <a href="index.php" class="img-container">
 
 
 
@@ -333,7 +333,7 @@
 
 
 
-                        <a href="Home-Index.html">手机APP</a>
+                        <a href="index.php">手机APP</a>
 
 
 
