--- a/Mobile/Live-Electric.html
+++ b/Mobile/Live-Electric.html
@@ -104,7 +104,7 @@
 
                 <div class="img-container">
 
-                    <a href="Home-Index.html">
+                    <a href="index.php">
 
                         <img src="img/logo.png" alt="乐鼎国际">
 
