--- a/Mobile/Member-Transfer.html
+++ b/Mobile/Member-Transfer.html
@@ -51,7 +51,7 @@
                 </a>
 
                 <div class="img-container">
-                    <a href="Home-Index.html">
+                    <a href="index.php">
                         <img src="img/logo.png" alt="乐鼎国际">
                     </a>
                 </div>
